--- a/config/dataset_generator_config.yaml
+++ b/config/dataset_generator_config.yaml
@@ -9,18 +9,21 @@ plugin:
 
   # sensor parameters
   sensor:
+    enable: true
     name: "os_128" #sensor_name
     topic: "/os1/pointCloud" #sensor_topic
     path: "/home/arvc/workSpaces/arvc_ws/src/arvc_dataset_generator/models/sensor/model.sdf"
 
   # camera parameters
   camera:
+    enable: true
     name: "camera" #camera_name
     topic: "/camera/depth/points" #camera_topic
     path: "/home/arvc/workSpaces/arvc_ws/src/arvc_dataset_generator/models/camera/model.sdf"
 
   # output data parameters
   data:
+    enable: true
     out_dir: "/media/arvc/data/datasets/TEST_GENERATOR"
     quantity: 1000 #number of generated scenes
     pc_binary: true
@@ -33,17 +36,17 @@ plugin:
     
     model: 
       - model0: #ID for the model 
-        name: "plane" # name to set to the model
-        path: "/home/arvc/workSpaces/arvc_ws/src/arvc_dataset_generator/models/enviroment"  # path to the model
-        num_models: 20
-        rand_mode: uniform
-        min_scale: [1.0, 1.0, 1.0]
-        max_scale: [1.0, 1.0, 1.0]
-        negative_offset: [-0.5, -0.5, 0.0]
-        positive_offset: [0.5, 0.5, 0.0]
-        positive_dist: [30.0, 30.0, 30.0]
-        negative_dist: [-30.0, -30.0, -30.0]
-        rotation_range: [360, 360, 360] 
+          name: "plane" # name to set to the model
+          path: "/home/arvc/workSpaces/arvc_ws/src/arvc_dataset_generator/models/enviroment"  # path to the model
+          num_models: 20
+          rand_mode: uniform
+          min_scale: [1.0, 1.0, 1.0]
+          max_scale: [1.0, 1.0, 1.0]
+          negative_offset: [-0.5, -0.5, 0.0]
+          positive_offset: [0.5, 0.5, 0.0]
+          positive_dist: [30.0, 30.0, 30.0]
+          negative_dist: [-30.0, -30.0, -30.0]
+          rotation_range: [360, 360, 360] 
 
   # labeled models parameters
   labeled_models:
