--- a/config/dataset_generator_config.yaml
+++ b/config/dataset_generator_config.yaml
@@ -34,7 +34,8 @@ environment:
   dynamic_models: true  
   
   model: 
-    - ID: #ID for the model 
+    - ID: #ID for the model
+      type: "environment" 
       name: "plane_0" # name to set to the model
       path: "/home/arvc/workSpaces/arvc_ws/src/arvc_dataset_generator/models/enviroment"  # path to the model
       num_models: 20
@@ -48,6 +49,7 @@ environment:
       rotation_range: [360, 360, 360] 
 
     - ID: #ID for the model 
+      type: "environment" 
       name: "plane_1" # name to set to the model
       path: "/home/arvc/workSpaces/arvc_ws/src/arvc_dataset_generator/models/enviroment"  # path to the model
       num_models: 20
@@ -68,6 +70,7 @@ labeled_models:
 
   model: 
     - ID: #ID for the model 
+      type: "labeled"
       name: "LAB_0" # name to set to the model
       path: "/home/arvc/workSpaces/arvc_ws/src/arvc_gazebo_models/simple_plane"  # path to the model
       num_models: 20
@@ -81,6 +84,7 @@ labeled_models:
       rotation_range: [360, 360, 360]
 
     - ID: #ID for the model 
+      type: "labeled"
       name: "LAB_1" # name to set to the model
       path: "/home/arvc/workSpaces/arvc_ws/src/arvc_gazebo_models/simple_plane"  # path to the model
       num_models: 20
